--- a/templates/account/register/register.html
+++ b/templates/account/register/register.html
@@ -1,5 +1,5 @@
 {% extends './register_base.html' %} {% load static %} {% load crispy_forms_tags%}
-
+{% block title %} Create Account {% endblock title %}
 {% block extrastyle %}
     <style>
         .header{
@@ -32,7 +32,9 @@
 {% block content %}
 {% include 'navbar.html' %}
 <div class="container">
+    
   <form method="POST" class="form-group">
+    <h1>Create New Account</h1>
     {% csrf_token %} {{form |crispy}}
     <button type="submit" class="btn btn-success">Register</button>
   </form>
