--- a/templates/account/register/register_base.html
+++ b/templates/account/register/register_base.html
@@ -5,19 +5,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" />
     <link rel="stylesheet" href="{% static 'css/bootstrap-grid.min.css' %}" />
     <link rel="stylesheet" href="{% static 'css/bootstrap-reboot.min.css' %}" />
-    <title>Document</title>
+    <title>{% block title %}{% endblock title%}</title>
     {% block extrastyle %}
-    {% endblock extrastyle%}
+    {% endblock extrastyle %}
 </head>
 <body>
+    {% block navbar %}
+    
+    {% endblock navbar %}
+
+   
     {% block content%}
 
     {% endblock content %}
 
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
     <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
+    <script src="{% static 'js/jquery-1.12.4.min.js' %}"></script>
 </body>
 </html>
