--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -2,22 +2,34 @@
 
 {% block extrastyles %}
   <style>
-    a{
+    .home {
       text-decoration: none;
       color: #fff;
+    }
+    .home:hover{
+      text-decoration: none;
+      color: #fff
+    }
+    a{
+      text-decoration: none;
+      cursor: pointer;
     }
   </style>
 {% endblock extrastyles %}
 {% block content %}
 <header class="header">
-  <h3><a href="/">TechXplorer</h3>
+  <h3><a class="home" href="/">TechXplorer</h3>
 <nav class="nav">
   
   <ul class="nav-links">
     <a href="#" class="nav-link"><li>About</li></a>
     <a href="#" class="nav-link"><li>Our Team</li></a>
+    {% if user.is_authenticated %}
+    <a href="accounts/logout" class="nav-link"><li>Sign-Out</li></a>
+    {% else %}
     <a href="/register" class="nav-link"><li>Sign-up</li></a>
-    <a href="/login" class="nav-link"><li>Login</li></a>
+    <a href="accounts/login" class="nav-link"><li>Login</li></a>
+    {% endif %}
   </ul>
 </nav>
 </header>
