--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -28,7 +28,7 @@
     <a href="accounts/logout" class="nav-link"><li>Sign-Out</li></a>
     {% else %}
     <a href="/register" class="nav-link"><li>Sign-up</li></a>
-    <a href="accounts/login" class="nav-link"><li>Login</li></a>
+    <a href="/accounts/login" class="nav-link"><li>Login</li></a>
     {% endif %}
   </ul>
 </nav>
