--- a/templates/registration/dashboard.html
+++ b/templates/registration/dashboard.html
@@ -138,7 +138,7 @@
                             <h5 class="card-title">{{ course.name }}</h5>
                             <h6 class="card-subtitle mb-2 text-muted">{{ course.status }}</h6>
                             <p class="card-text">{{ course.description }}</p>
-                           <button type="submit"><a href="/add_to_enrolled/" class="btn btn-primary">Enroll Now</a></button>
+                           <button type="submit"><a href="/add_to_enrolled/{{ course.slug }}" class="btn btn-primary">Enroll Now</a></button>
                         </div>
                     </div>
                 </div>
