--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -6,6 +6,9 @@
         #header {
             background: #000;
         }
+        .app-account > caption{
+            background: #33ff00;
+        }
     </style>
 {% endblock %}
 {% block branding %}
