--- a/staticfiles/css/styles.scss
+++ b/staticfiles/css/styles.scss
@@ -5,7 +5,7 @@
 }
 .header {
   position: fixed;
-  z-index: 1;
+  z-index: 4;
   background: rgb(62, 129, 253);
   display: flex;
   justify-content: space-around;
@@ -18,6 +18,9 @@
   .nav {
     display: flex;
     flex: 0.4;
+    .burger {
+      display: none;
+    }
 
     .nav-links {
       display: flex;
@@ -31,6 +34,62 @@
         flex: 1;
         color: #fff;
       }
+    }
+  }
+}
+@media screen and (max-width: 800px) {
+  .header {
+    .nav {
+      .burger {
+        width: 100%;
+        display: flex;
+        cursor: pointer;
+        justify-content: flex-end;
+        align-items: flex-end;
+      }
+      .nav-links {
+        position: absolute;
+        background: rgb(62, 129, 253);
+        top: -1000px;
+        transition: 0.4s linear;
+        animation: 0.5s nav-return;
+        z-index: -1;
+      }
+      .nav-reveal {
+        animation: 0.7s nav-slick linear;
+        text-align: justify;
+        display: block;
+        position: absolute;
+        top: 10vh;
+        padding-left: 1rem;
+        padding-right: 5rem;
+        padding-top: 3rem;
+        z-index: -1;
+        height: 100vh;
+        width: 100%;
+      }
+    }
+  }
+  @keyframes nav-slick {
+    0% {
+      top: -1000px;
+    }
+    50% {
+      top: 3vh;
+    }
+    100% {
+      top: 10vh;
+    }
+  }
+  @keyframes nav-return {
+    0% {
+      top: 10vh;
+    }
+    50% {
+      top: 3vh;
+    }
+    100% {
+      top: -1000px;
     }
   }
 }
