--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -6,9 +6,17 @@
         #header {
             background: #000;
         }
-        .app-account > caption{
-            background: #33ff00;
+        .module h2, .module caption, .inline-group h2 {
+        background: #000;
         }
+       div.breadcrumbs{
+            background: #3e81fd;
+        }
+        .login {
+            background: #000;
+        }
+       
+
     </style>
 {% endblock %}
 {% block branding %}
