--- a/templates/registration/nav.html
+++ b/templates/registration/nav.html
@@ -72,7 +72,7 @@
 
 <header class="header">
   <div class="head-title">
-    <a href="#" class="home"><h3>Dashboard</h3></a>
+    <a href="/dashboard" class="home"><h3>Dashboard</h3></a>
   </div>
   <nav>
     <ul class="nav-links">
