--- a/staticfiles/css/styles.css
+++ b/staticfiles/css/styles.css
@@ -571,4 +571,55 @@
   padding-bottom: 10px;
   text-align: center;
 }
+
+.cono {
+  min-height: 100vh;
+}
+
+.cono .empty {
+  height: 10vh;
+}
+
+.cono .course-titles {
+  position: absolute;
+  height: 50vh;
+  background: #e9e9e9;
+  width: 30%;
+  text-align: justify;
+  overflow-y: auto;
+}
+
+.cono .the-course {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-40%, -40%);
+          transform: translate(-40%, -40%);
+}
+
+.cono .the-course .description {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+}
+
+.cono .the-course .btns {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+}
 /*# sourceMappingURL=styles.css.map */
